# bus_reserve_backend

./: .pre-commit-config.yaml  api.md  docker-compose.yml  dockerfile  pyproject.toml
.github/actions/test-docker/: action.yml
.github/workflows/: build.yml
api/: models.py  views.py
api/migrations/: 0001_initial.py  0002_remove_userinfo_id_userinfo_u_id.py  0003_businfo.py  0004_ticketinfo_remove_businfo_b_id_remove_userinfo_u_id_and_more.py  0005_alter_userinfo_name.py  0006_alter_businfo_id_alter_userinfo_id.py  0007_delete_businfo_delete_ticketinfo_delete_userinfo.py  0008_initial.py  0009_alter_userinfo_name.py  0010_alter_userinfo_name.py  0011_alter_businfo_busnum.py  0012_userinfo_is_admin.py  0013_alter_ticketinfo_status.py  0014_alter_ticketinfo_b_id_alter_ticketinfo_u_id.py  0015_alter_ticketinfo_id.py  0016_businfo_seats.py  0017_businfo_fare_businfo_remained_seats.py
djangoProject/: settings.py  urls.py
utils/: exception.py  rendererresponse.py
